fet: Use JDK 25 version🫸🌀✏️📗🐧🐳⬆